--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "css-loader": "^5.2.7",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.6",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^10.2.0",
+    "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.46.0",
     "webpack-merge": "^5.8.0"
   },
   "eslintConfig": {
